<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

    <com.google.android.material.card.MaterialCardView
            style="@style/Card.Test"
            android:layout_margin="@dimen/recycler_item_margin">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_test_type_padding"
                android:gravity="center">


            <ImageView
                    style="@style/ImageViewMedium"
                    android:id="@+id/imageTest"
                    android:src="@drawable/splash_logo_2"
                    />


            <TextView
                    style="@style/Text.Title.Black"
                    android:id="@+id/textTestTitle"
                    android:layout_margin="@dimen/card_test_type_margin"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/base_test_title"
                    />

            <View
                    style="@style/Divider"/>


            <TextView
                    style="@style/Text.Normal"
                    android:id="@+id/textTestDescription"
                    android:layout_marginTop="@dimen/card_test_type_margin"
                    android:layout_marginBottom="@dimen/card_test_type_margin"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:lines="3"
                    android:text="@string/base_test_description"
                    />


            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonTestStart"
                    android:text="@string/run_test"
                    />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>



